--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,20 +2,40 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@layer base {
+  body {
+    color: white;
+    background-color: black;
   }
 }
+@hero.tsx style={{ backgroundSize: "35%" }}
+@layer components {
+     .menuLink {
+      @apply cursor-pointer hover:text-[#c5c5c5];
+     }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+     .tags{background-color:blue;
+           margin-right: 0.5rem;
+           margin-top: 0.5rem;
+           padding: 3px 10px;
+           display: inline-block;
+           color: white;
+           font-size: 12px;
+    }
+
+    .tags:last-child {
+      margin-right: 0;
+    }
+    .tags:nth-child(2){
+      background-color: rgb(57, 10, 100);
+    }
+    
+    .tags:nth-child(3){
+      background-color: green;
+    }
+
+    .tags:nth-child(4){
+      background-color:red;
+    }
+
 }
